# BareOS-Operating-System

./: README.md  bareOS.cmake  pico_sdk_import.cmake  run
src/: CMakeLists.txt  blink.c
